@startuml

title Module de Transformation \n Système ABC vers Système DDD\n8INF334 - Hiver 2026

top to bottom direction

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "utils" {
    class Logger <<Singleton>> {
        - {static} instance : Logger
        - formatter : DateTimeFormatter
        - Logger()
        + {static} getInstance() : Logger
        + info(message : String) : void
        + warning(message : String) : void
        + error(message : String) : void
        + exception(message : String, e : Exception) : void
        - log(level : String, message : String) : void
        + getFormatter() : DateTimeFormatter
        + setFormatter(formatter : DateTimeFormatter) : void
    }
}

package "abc" {
    class SystemeABC {
        - logger : Logger
        + SystemeABC()
        + genererRapport(idProduit : int) : String
        + getLogger() : Logger
        + setLogger(logger : Logger) : void
    }
}

package "transformation" {
    interface ArticleExterneInterface {
        + getNom() : String
        + getPrix() : double
        + getType() : String
        + getDetails() : String
    }

    class JSONParser {
        - logger : Logger
        + JSONParser()
        + parse(json : String) : Map<String, String>
        + getString(data : Map<String, String>, key : String) : String
        + getDouble(data : Map<String, String>, key : String) : double
        + getInt(data : Map<String, String>, key : String) : int
        + getBoolean(data : Map<String, String>, key : String) : boolean
        + getLogger() : Logger
        + setLogger(logger : Logger) : void
    }

    together {
        class AdaptateurSuperColle {
            - nom : String
            - volumeMl : int
            - tempsSechageSec : int
            - resistantEau : boolean
            - prix : double
            - logger : Logger
            + AdaptateurSuperColle(jsonData : String)
            + getNom() : String
            + getPrix() : double
            + getType() : String
            + getDetails() : String
            + setNom(nom : String) : void
            + getVolumeMl() : int
            + setVolumeMl(volumeMl : int) : void
            + getTempsSechageSec() : int
            + setTempsSechageSec(tempsSechageSec : int) : void
            + isResistantEau() : boolean
            + setResistantEau(resistantEau : boolean) : void
            + setPrix(prix : double) : void
            + getLogger() : Logger
            + setLogger(logger : Logger) : void
        }

        class AdaptateurCouteauPrecision {
            - nom : String
            - longueurLameCm : double
            - lameRemplacable : boolean
            - materiau : String
            - prix : double
            - logger : Logger
            + AdaptateurCouteauPrecision(jsonData : String)
            + getNom() : String
            + getPrix() : double
            + getType() : String
            + getDetails() : String
            + setNom(nom : String) : void
            + getLongueurLameCm() : double
            + setLongueurLameCm(longueurLameCm : double) : void
            + isLameRemplacable() : boolean
            + setLameRemplacable(lameRemplacable : boolean) : void
            + getMateriau() : String
            + setMateriau(materiau : String) : void
            + setPrix(prix : double) : void
            + getLogger() : Logger
            + setLogger(logger : Logger) : void
        }

        class AdaptateurTabletteHumide {
            - nom : String
            - taille : String
            - feuillesSupplementaires : int
            - material : String
            - prix : double
            - logger : Logger
            + AdaptateurTabletteHumide(jsonData : String)
            + getNom() : String
            + getPrix() : double
            + getType() : String
            + getDetails() : String
            + setNom(nom : String) : void
            + getTaille() : String
            + setTaille(taille : String) : void
            + getFeuillesSupplementaires() : int
            + setFeuillesSupplementaires(feuillesSupplementaires : int) : void
            + getMaterial() : String
            + setMaterial(material : String) : void
            + setPrix(prix : double) : void
            + getLogger() : Logger
            + setLogger(logger : Logger) : void
        }

        class AdaptateurGenerique {
            - nom : String
            - prix : double
            - type : String
            - details : String
            - logger : Logger
            + AdaptateurGenerique(jsonData : String, type : String, cleDetails : List<String>)
            + getNom() : String
            + getPrix() : double
            + getType() : String
            + getDetails() : String
        }
    }
}

package "ddd" {
    class SystemeDDD {
        - catalogue : List<EnsembleBricolageABC>
        - logger : Logger
        + SystemeDDD()
        + importExtArt(article : ArticleExterneInterface) : void
        + afficherCatalogue() : void
        + getCatalogue() : List<EnsembleBricolageABC>
        + setCatalogue(catalogue : List<EnsembleBricolageABC>) : void
        + getLogger() : Logger
        + setLogger(logger : Logger) : void
    }

    abstract class EnsembleBricolageABC {
        - nom : String
        - prix : double
        - type : String
        - details : String
        + EnsembleBricolageABC()
        + EnsembleBricolageABC(nom : String, prix : double, type : String, details : String)
        + {abstract} afficherInformations() : void
        + getNom() : String
        + setNom(nom : String) : void
        + getPrix() : double
        + setPrix(prix : double) : void
        + getType() : String
        + setType(type : String) : void
        + getDetails() : String
        + setDetails(details : String) : void
    }

    together {
        class SuperColle {
            + SuperColle()
            + SuperColle(nom : String, prix : double, type : String, details : String)
            + afficherInformations() : void
        }

        class CouteauPrecision {
            + CouteauPrecision()
            + CouteauPrecision(nom : String, prix : double, type : String, details : String)
            + afficherInformations() : void
        }

        class TabletteHumide {
            + TabletteHumide()
            + TabletteHumide(nom : String, prix : double, type : String, details : String)
            + afficherInformations() : void
        }

        class ProduitGeneriqueDDD {
            + ProduitGeneriqueDDD()
            + ProduitGeneriqueDDD(nom : String, prix : double, type : String, details : String)
            + afficherInformations() : void
        }
    }
}

class Main {
    + {static} main(args : String[]) : void
}

class "produits.properties" <<fichier configuration>> {
    produit.N.cle_nom
    produit.N.cle_prix
    produit.N.type
    produit.N.details
}

' Implémentation interface
ArticleExterneInterface <|.. AdaptateurSuperColle
ArticleExterneInterface <|.. AdaptateurCouteauPrecision
ArticleExterneInterface <|.. AdaptateurTabletteHumide
ArticleExterneInterface <|.. AdaptateurGenerique

' Utilisation JSONParser
AdaptateurSuperColle ..> JSONParser
AdaptateurCouteauPrecision ..> JSONParser
AdaptateurTabletteHumide ..> JSONParser
AdaptateurGenerique ..> JSONParser

' Héritage produits DDD
EnsembleBricolageABC <|-- SuperColle
EnsembleBricolageABC <|-- CouteauPrecision
EnsembleBricolageABC <|-- TabletteHumide
EnsembleBricolageABC <|-- ProduitGeneriqueDDD

' Composition catalogue
SystemeDDD "1" *-- "0..*" EnsembleBricolageABC
SystemeDDD --> ArticleExterneInterface

' Logger
SystemeABC ..> Logger
SystemeDDD ..> Logger
JSONParser ..> Logger
AdaptateurSuperColle ..> Logger
AdaptateurCouteauPrecision ..> Logger
AdaptateurTabletteHumide ..> Logger
AdaptateurGenerique ..> Logger

' Main
Main ..> SystemeABC
Main ..> SystemeDDD
Main ..> AdaptateurSuperColle
Main ..> AdaptateurCouteauPrecision
Main ..> AdaptateurTabletteHumide
Main ..> AdaptateurGenerique
Main ..> "produits.properties"


@enduml
